--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,9 @@
     </dependency>
 
     <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.5</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-math3</artifactId>
-      <version>3.6</version>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.0</version>
     </dependency>
 
   </dependencies>
